--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,19 +11,23 @@ body {
     margin: 50px;
     left: 10%;
     right: 10%;
-    height: 50vh;
     border: 1px solid;
-}
-
-#start-button-container {
-    margin-top: 10vh;
     display: flex;
     justify-content: center;
+    flex-direction: row;
+    padding: 20px;
+}
+
+#start-button-container {    
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 
     button {
         border: 0px;
         border-radius: 10px;
         font-size: 40px;
-        padding: 40px 200px;
+        padding: 80px 200px;
     }
 }
