--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,3 +31,41 @@ body {
         padding: 80px 200px;
     }
 }
+
+#button-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
+    button {
+        margin: 5px;
+        padding: 10px 20px;
+        font-size: 16px;
+    }
+}
+
+#slider-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#bet-raise-buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+    button {
+        flex: 1;
+        width: 100%;
+    }
+
+}
