--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,11 +39,8 @@ body {
     }
 }
 
-#community-cards-container {
+.card-container {
     position: fixed;
-    top: 200px;
-    left: 50%;
-    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -52,17 +49,26 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+#community-cards-container {
+    top: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 #hole-cards-container {
-    position: fixed;
     bottom: 40px;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    padding: 10px;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+#dealer-cards-container {
+    bottom: 40px;
+    left: 40px;
+
+    .card {
+        width: 120px;
+        height: 200px;
+    }
 }
 
 #slider-container {
@@ -103,21 +109,21 @@ body {
     border-radius: 8px;
     font-family: Arial, sans-serif;
     font-size: 14px;
-}
 
-#poker-hand-table h3 {
-    margin-bottom: 8px;
-    font-size: 16px;
-}
+    h3 {
+        margin-bottom: 8px;
+        font-size: 16px;
+    }
 
-#poker-hand-table ul {
-    padding-left: 16px;
-    margin: 0;
-}
+    ul {
+        padding-left: 16px;
+        margin: 0;
+    }
 
-#poker-hand-table li {
-    margin-bottom: 4px;
-    cursor: pointer;
+    li {
+        margin-bottom: 4px;
+        cursor: pointer;
+    }
 }
 
 #tooltip {
