--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ body {
 
 .card {
     width: 150px;
-    height: 250px;
+    height: 210px;
     border: 1px solid black;
     border-radius: 5px;
     background-color: white;
@@ -136,4 +136,8 @@ body {
     pointer-events: none;
     z-index: 1000;
     white-space: nowrap;
+}
+
+.card img{
+    width:  150px;
 }
