--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,9 +69,8 @@ body {
     left: 40px;
     z-index: 2;
 
-    .card {
+    .card img {
         width: 120px;
-        height: 200px;
     }
 }
 
@@ -94,11 +93,6 @@ body {
 }
 
 .card {
-    width: 150px;
-    height: 210px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: white;
     margin: 10px;
 }
 
@@ -143,14 +137,15 @@ body {
     white-space: nowrap;
 }
 
-.card img{
-    width:  150px;
+.card img {
+    width: 150px;
 }
 
 #endRoundContainer{
     position: fixed;
-    left: 50%;
     top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
