--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,7 +110,7 @@ body {
     z-index: 0;
 
     h3 {
-        margin-bottom: 8px;
+        margin: 8px 0px;
         font-size: 16px;
     }
 
@@ -143,33 +143,22 @@ body {
 
 #endRoundContainer{
     position: fixed;
-    top: 50%;
+    top: 40vh;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100px;
-    width: 200px;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 10%;
+    width: 500px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 1.0);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-}
 
-#newRoundButton {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10%;
-    box-shadow: 2px 2px;
-}
-
-#endGameButton {
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10%;
-    box-shadow: 2px 2px;
+    button {
+        margin: 5px;
+        padding: 10px 20px;
+        font-size: 32px;
+    }
 }
