--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,17 @@
 body {
     color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
-}
+    background-color: #1a0000;
+    margin: 0px;
+    padding: 0px;
+    font-family: sans-serif;
 
-#main-header {
-    text-align: center;
+    h1 {
+        font-size: 3rem;
+        color: #ffffff;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
 }
 
 #start-button-container {    
@@ -38,6 +45,31 @@ body {
         padding: 10px 20px;
         font-size: 16px;
     }
+}
+
+#start-button {
+    background: linear-gradient(135deg, #ff1a1a, #990000);
+    color: white;
+    font-size: 1.5rem;
+    padding: 0.75em 1.5em;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 15px #ff1a1a;
+    animation: pulse 2s infinite;
+    transition: transform 0.3s, bos-shadow 0.3s;
+
+}
+
+#start-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 25px #ff3333, 0 0 40px #ff3333;
+}
+
+@keyframes pulse {
+    0% {box-shadow: 0 0 10px #ff1a1a; }
+    50% {box-shadow: 0 0 20px #ff4d4d; }
+    100% {box-shadow: 0 0 10px #ff1a1a; }
 }
 
 .card-container {
