--- a/stylesheet.css
+++ b/stylesheet.css
@@ -215,26 +215,31 @@ body {
 #poker-rules {
     background-color: var(--container-color);
     color: white;
-    padding: 20px;
-    border-radius: var(--container-radius);
+    padding: var(--container-padding)
+    border-radius var(--container-padding);
     max-width: 600px;
-    margin: 0 auto 60px auto;
+    margin: 0 auto;
     text-align: left;
     font-size: 1rem;
     line-height: 1.6;
-    box-shadow: 0 0 15px rgba(255, 0, 0, 0.4);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 #poker-rules h2 {
-    font-size: 1.5rem;
-    margin-bottom: 12px;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
     color: #f99;
     text-align: center;
 }
 #poker-rules ul {
     list-style-type: disc;
     padding-left: 20px;
+    max-width: 500px;
 }
 
 #poker-rules li {
-    margin-bottom: 8px;
+    margin-bottom: 10px;
 }
