--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,13 +105,36 @@ body {
 }
 
 #dealer-cards-container {
+    position: fixed;
     bottom: 40px;
     left: 40px;
     z-index: 2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
     .card img {
         width: 120px;
     }
+}
+
+#dealerChips {
+    position: fixed;
+    bottom: 192px;
+    left: 5%;
+    font-size: 16px;
+    background-color: var(--container-color);
+    color: white;
+    padding: 5px 10px;
+    border-radius: var(--container-radius);
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
+    z-index: 3;
+}
+
+.dealer-card-row {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 #slider-container {
