--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
     h1 {
+        font-family: 'Georgia', serif;
         font-size: 3rem;
         margin-top: 2rem;
         margin-bottom: 2rem;
@@ -55,6 +56,7 @@ body {
 #start-button {
     background: linear-gradient(135deg, #ff1a1a, #990000);
     color: white;
+    font-family: 'Georgia', serif;
     font-size: 1.5rem;
     padding: 0.75em 1.5em;
     border-radius: var(--container-radius);
@@ -263,6 +265,3 @@ body {
     max-width: 500px;
 }
 
-#poker-rules li {
-    margin-bottom: 10px;
-}
