--- a/stylesheet.css
+++ b/stylesheet.css
@@ -317,6 +317,30 @@ body {
     display: none;
 }
 
+#gameLogContainer{
+    position: fixed;
+    right: 40px;
+    top: 40px;
+    width: 150px;
+    height: 100px;
+}
+
+#gameLog{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    left: 10%;
+    top: 10%;
+    width: 80%;
+    height: 80%;
+    background-color: lightgray;
+    overflow-y: auto;
+
+    p{
+        color: black;
+    }
+}
+
 @keyframes tutorialPulse {
     0% { border-color: #ff3333; }
     50% { border-color: #ff9999; }
